# station

./: .gitignore  BLE_GATT_使用说明.md  CMakeLists.txt  LED颜色测试Demo使用说明.md  LED颜色测试Demo快速开始.md  partitions.csv  sdkconfig.old  test_build.bat  基站BLE广播包格式说明.md  基站与智能标签BLE通信对接说明.md  快速开始.md  智能标签固件更新说明.md  说明.md  配置说明.md
components/bluetooth_manager/: CMakeLists.txt  bluetooth_manager.c  gap.c  gatt_svc.c  inventory_manager.c
components/bluetooth_manager/include/: bluetooth_manager.h  common.h  gap.h  gatt_svc.h  inventory_manager.h
components/led_controller/: CMakeLists.txt  led_controller.c
components/led_controller/include/: led_controller.h
components/mqtt_manager/: CMakeLists.txt  mqtt_manager.c
components/mqtt_manager/include/: mqtt_manager.h
components/ota_manager/: CMakeLists.txt  ota_manager.c
components/ota_manager/include/: ota_manager.h
components/system_config/: CMakeLists.txt  system_config.c
components/system_config/include/: system_config.h
main/: CMakeLists.txt  led_color_test_demo.c  main.c
